# fast-api-sample

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: build.sh  deploy.sh
src/: lambda_handler.py  main.py  models.py
terraform/: main.tf  outputs.tf  variables.tf
